src/components/Footer/Footer.css
/* FOOTER */

.footer {
  position: relative;
  background: var(--c-bg-footer);
  color: var(--c-text-white);
  overflow: hidden;
}

/* Content wrapper */
.footer-inner {
  position: relative;
  z-index: 1;
  width: 100%;
  margin: 0 auto;
  padding: 2rem 1.25rem clamp(8rem, 22vw, 12rem);
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

/* Links */
.footer-nav {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  padding-bottom: 1.8rem;
}

.footer-link {
  color: var(--c-text-white);
  text-decoration: none;
  font-family: var(--font-sans);
  font-weight: 300;
  font-size: 15px;
  line-height: 29px;
}

.footer-link:hover {
  text-decoration: underline;
}

/* Copy text */
.footer-copy {
  margin: 0;
  font-family: var(--font-sans);
  font-weight: 300;
  font-size: 14px;
  line-height: 22px;
  max-width: 34ch;
  text-align: left;
}

.footer-logo {
  position: absolute;
  left: 50%;
  bottom: 0;
  z-index: 0;
  width: calc(100% - 2.5rem);
  transform: translateX(-50%);
  text-align: center;
  pointer-events: none;
  user-select: none;
  white-space: nowrap;
}

.footer-logo-img {
  display: block;
  width: 100%;
  height: auto;
}

/* TABLET */
/*Split left nav left, copy right */
@media (min-width: 768px) and (max-width: 1023px) {
  .footer-inner {
    display: grid;
    grid-template-columns: 220px 1fr;
    column-gap: 1.5rem;
    align-items: start;
  }

  .footer-copy {
    justify-self: end;
    max-width: 245px;
    font-size: 15px;
    line-height: 25px;
  }
}

/* Reduce top spacing */
@media (min-width: 768px) and (max-width: 900px) {
  .footer-inner {
    padding-top: 0.5rem;
  }
}

/* DESKTOP */
@media (min-width: 1024px) {
  .footer {
    height: 528px;
  }

  .footer-inner {
    padding: 64px 64px 0;

    height: 100%;
    display: grid;
    grid-template-columns: 245px 1fr 245px;
    align-items: start;
  }

  .footer-nav {
    grid-column: 1;
    padding-bottom: 0;
  }

  .footer-copy {
    grid-column: 3;
    justify-self: end;
    max-width: 245px;
    font-size: 15px;
    line-height: 25px;
  }

  .footer-logo {
    width: calc(100% - 64px);
    bottom: 0;
    transform: translateX(-50%);
  }
}

